fix(wizard): fix wizard not visible in dark theme EE-1800 (#874)
* fix wizard not visible in dark theme

--- a/app/assets/css/theme.css
+++ b/app/assets/css/theme.css
@@ -63,6 +63,7 @@
   --grey-58: #ebf4f8;
   --grey-59: #e6e6e6;
   --grey-60: #cacaca;
+  --grey-61: rgb(231, 231, 231);
 
   --blue-1: #219;
   --blue-2: #337ab7;
@@ -157,6 +158,8 @@
   --bg-btn-focus: var(--grey-59);
   --bg-boxselector-disabled-color: var(--white-color);
   --bg-small-select-color: var(--white-color);
+  --bg-stepper-item-active: var(--white-color);
+  --bg-stepper-item-counter: var(--grey-61);
 
   --text-main-color: var(--grey-7);
   --text-body-color: var(--grey-6);
@@ -319,6 +322,8 @@
   --bg-btn-focus: var(--grey-3);
   --bg-boxselector-disabled-color: var(--grey-54);
   --bg-small-select-color: var(--grey-2);
+  --bg-stepper-item-active: var(--grey-1);
+  --bg-stepper-item-counter: var(--grey-7);
 
   --text-main-color: var(--white-color);
   --text-body-color: var(--white-color);
@@ -488,6 +493,8 @@
   --bg-boxselector-color: var(--black-color);
   --bg-boxselector-disabled-color: var(--black-color);
   --bg-small-select-color: var(--black-color);
+  --bg-stepper-item-active: var(--black-color);
+  --bg-stepper-item-counter: var(--grey-3);
 
   --text-main-color: var(--white-color);
   --text-body-color: var(--white-color);
